WCM-195: fix keyword widget li elements jumping, set direction to row

--- a/core/src/zeit/cms/browser/resources/cms_widgets.css
+++ b/core/src/zeit/cms/browser/resources/cms_widgets.css
@@ -653,12 +653,13 @@ a.button.configure_search:hover {
     border-bottom: 1px solid #dddddd;
     width: 100%;
     height: 18px;
+    min-height: 18px;
     cursor: move;
 }
 
 .keyword-widget ol li {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     gap: 0.5em;
 }
 
